fix(Sonner): correct position on mobile when `rtl`

--- a/apps/docs/styles/globals.css
+++ b/apps/docs/styles/globals.css
@@ -72,7 +72,7 @@
     content: counter(step);
   }
   .neo-brutalism {
-    @apply shadow-color-primary active:shadow-color-primary-active  border-primary rounded border-2 px-4 py-2 font-bold uppercase transition-all active:translate-x-0.5 active:translate-y-0.5 dark:bg-black;
+    @apply shadow-color-primary active:shadow-color-primary-active border-primary rounded border-2 px-4 py-2 font-bold uppercase transition-all active:translate-x-0.5 active:translate-y-0.5 dark:bg-black;
   }
   .clickable-link {
     @apply text-primary/80 hover:text-primary cursor-pointer underline underline-offset-4 transition-all;
@@ -492,5 +492,12 @@
 @media (max-width: 640px) {
   .container {
     @apply px-4;
+  }
+}
+
+@media (max-width: 600px) {
+  [data-sonner-toaster] {
+    --mobile-offset: 32px !important;
+    right: var(--mobile-offset) !important ;
   }
 }
